Disable hints in GuessPrompt when no value and fix screen styling on mobile

--- a/src/components/GuessPrompt/GuessPrompt.module.css
+++ b/src/components/GuessPrompt/GuessPrompt.module.css
@@ -77,15 +77,15 @@
     font-weight: bold;
 }
 
-.hints .street-name {
+.hints .street {
     background-color: red;
 }
 
-.hints .establishment-types {
+.hints .types {
     background-color: blue;
 }
 
-.hints .random-review {
+.hints .reviews {
     background-color: green;
 }
 
