--- a/src/pages/Create/Create.module.css
+++ b/src/pages/Create/Create.module.css
@@ -3,7 +3,9 @@
 .Create {
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    position: fixed;
+    height: 100%;
+    width: 100%;
 }
 
 .nav {
