--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,9 +1,10 @@
 @import "../../vars.css";
 
 .Home {
+    position: fixed;
     background-color: var(--color-bg);
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
