--- a/src/pages/LobbyView/LobbyView.module.css
+++ b/src/pages/LobbyView/LobbyView.module.css
@@ -1,6 +1,7 @@
 .LobbyView {
-    height: 100vh;
-    width: 100vw;
+    position: fixed;
+    height: 100%;
+    width: 100%;
     padding: 30px;
     display: flex;
     flex-direction: row;
